--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,10 @@
             <artifactId>commons-csv</artifactId>
             <version>1.10.0</version> <!-- You can use the latest version -->
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
 
         <!-- New Dependency -->
         <dependency>
